<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glumci</string>

    <string name="activity_first_toolbar_title">Toolbar</string>
    <string name="activity_second_toolbar_title">Toolbar</string>

    <string name="first_action_add">Add</string>
    <string name="first_action_settings">Settings</string>
    <string name="first_action_about">About</string>

    <string name="biografija">BIOGRAFIJA:</string>
    <string name="ocena">OCENA:</string>
    <string name="filmovi">FILMOVI:</string>

    <string name="first_action_edit">Edit</string>
    <string name="first_action_delete">Delete</string>
    <string name="first_action_add_film">AddFilm</string>

    <string name="dialog_about_ok">Ok</string>
    <string name="dialog_about_title">AUTOR:</string>
    <string name="dialog_about_message">Aleksandar Aleksic</string>


    <string name="pref_toast">pref_toast</string>
    <string name="pref_toast_title">Allow Toast</string>
    <string name="pref_toast_summary">Notifikacije u vidu toast poruke</string>

    <string name="pref_notification">pref_notification</string>
    <string name="pref_notification_title">Allow Notification</string>
    <string name="pref_notification_summary">Notifikacije pomocu Notification Manager-a</string>

    <string name="first_action_picture">Picture</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Sinhronizacija aplikacije u zadatom intervalu</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="film_naziv">MOVIE NAME:</string>
    <string name="film_zanr">MOVIE GENRE:</string>
    <string name="film_godina">MOVIE YEAR:</string>


    <string name="glumac_ime">ACTOR NAME:</string>
    <string name="glumac_biografija">ACTOR BIOGRAPHY:</string>
    <string name="glumac_ocena">ACTOR RATING:</string>
    <string name="glumac_ocenabar">ACTOR RATING BAR [1-5]:</string>
    <string name="glumac_datum">ACTOR BIRTHDAY:</string>




</resources>