<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_settings"
        android:title="Preferences">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType"
            android:summary="%s"
            android:defaultValue="1"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_toast"
            android:summary="@string/pref_toast_summary"
            android:title="@string/pref_toast_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_notification"
            android:summary="@string/pref_notification_summary"
            android:title="@string/pref_notification_title" />


    </PreferenceCategory>

</PreferenceScreen>