<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_picture"
        android:title="@string/first_action_picture"
        android:icon="@drawable/ic_action_picture"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_edit"
        android:title="@string/first_action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/first_action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_film"
        android:title="@string/first_action_add_film"
        android:icon="@drawable/ic_action_add_film"
        app:showAsAction="always" />

</menu>